--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -83,4 +83,4 @@ jobs:
       - name: Output Imformation
         run: |
           echo "Something went wrong"
-          echo "${{ github}}"
+          echo "${{ toJson(github)}}"
