--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,8 +7,18 @@ on:
             required: false
             default: dist
             type: string
+        outputs:
+            result:
+                description: 'Result of the deployment'
+                value: ${{ jobs.deploy.outputs.outcome }}
+        #secrets:
+         #   some-secret:
+          #      required: false
+        
 jobs:
     deploy:
+        outputs: 
+            outcome: ${{steps.set-result.outputs.step-result}}
         runs-on: ubuntu-latest
         steps:
             - name: Get code
@@ -17,3 +27,6 @@ jobs:
                 name: ${{inputs.artifact-name}} }}
             - name: Output information
               run: echo "Deploying & updaloading"
+            - name: Set result output
+              id: set-result
+              run: echo "::set-output name=step-result::Deployment successful"     
