added path to artifact

--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -25,6 +25,7 @@ jobs:
               uses: actions/download-artifact@v4
               with:
                 name: ${{inputs.artifact-name}} }}
+                path: dist
             - name: Output information
               run: echo "Deploying & updaloading"
             - name: Set result output
