--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -24,7 +24,7 @@ jobs:
             - name: Get code
               uses: actions/download-artifact@v4
               with:
-                name: ${{inputs.artifact-name}} }}
+                name: ${{inputs.artifact-name}}
                 path: dist
             - name: Output information
               run: echo "Deploying & updaloading"
